--- a/qa327/templates/register.html
+++ b/qa327/templates/register.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<h2 id="welcome-header">Hi there!</h2>
 <h4 id='message'>{{message}}</h4>
 <form method="post">
   <div class="form-group">
