--- a/qa327/templates/404.html
+++ b/qa327/templates/404.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>404 Page Not Found</h1>
-<p id="404-pError">The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.</p>
+<h1 id="404-header">404 Page Not Found</h1>
+<p>The requested URL was not found on the server. If you entered the URL manually please check your spelling and try again.</p>
 </body>
 </html>
