--- a/qa327/templates/login.html
+++ b/qa327/templates/login.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <h1>{% block title %}Log In{% endblock %}</h1>
+<h2 id="welcome-header">Hi there!</h2>
 <h4 id='message'>{{message}}</h4>
 <form method="post">
   <div class="form-group">
