--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -8,7 +8,7 @@
 
 <!--For R3.2 and 3.3, user balance is temporary until backend iis done-->
 <h2 id="welcome-header">Hi {{ user.name }} !</h2>
-<h2 id="user_balance"> Current balance: {{ user.balance }}</h2>
+<h2 id="user_balance">Current User Balance: {{ user.balance }}</h2>
 
 <h2 >Here are all available tickets</h2>
 
