--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -36,7 +36,7 @@
 <!--Added sell form for selling tickets for R3-->
 <br>
 <h1>Sell</h1>
-<h4 id='sell_message'>{{message}}</h4>
+<h4 id='sell_message'>{{sell_message}}</h4>
 <form method="post" id="sell" action="/sell">
     <div class="form-group">
         <label for="name_sell">Name</label>
@@ -54,13 +54,13 @@
 <!--Added buy form for buying tickets for R3-->
 <br>
 <h1>Buy</h1>
-<h4 id='buy_message'>{{message}}</h4>
+<h4 id='buy_message'>{{buy_message}}</h4>
 <form method="post" id="buy"  action="/buy">
     <div class="form-group">
         <label for="name_buy">Name</label>
-        <input class="form-control" name="name" id="name_buy" required>
+        <input class="form-control" name="name_buy" id="name_buy" required>
         <label for="quantity_buy">Quantity</label>
-        <input class="form-control" type="number" name="quantity" id="quantity_buy" required>
+        <input class="form-control" type="number" name="quantity_buy" id="quantity_buy" required>
         <input class="btn btn-lg btn-primary" type="submit" id="btn-submit-buy" value="Buy">
     </div>
 </form>
@@ -68,17 +68,17 @@
 <!--Added update form for updating tickets for R3-->
 <br>
 <h1>update</h1>
-<h4 id='update_message'>{{message}}</h4>
+<h4 id='update_message'>{{update_message}}</h4>
 <form method="post" id="update" action="/update">
     <div class="form-group">
         <label for="name_update">Name</label>
-        <input class="form-control" name="name" id="name_update" required>
+        <input class="form-control" name="name_update" id="name_update" required>
         <label for="quantity_update">Quantity</label>
-        <input class="form-control" type="number" name="quantity" id="quantity_update" required>
+        <input class="form-control" type="number" name="quantity_update" id="quantity_update" required>
         <label for="price_update">Price</label>
-        <input class="form-control" type="number" name="price" id="price_update" required>
+        <input class="form-control" type="number" name="price_update" id="price_update" required>
         <label for="expdate_update">Expiration Date</label>
-        <input class="form-control" name="expdate" id="expdate_update" required>
+        <input class="form-control" name="expdate_update" id="expdate_update" required>
         <input class="btn btn-lg btn-primary" type="submit" id="btn-submit-update" value="Update">
     </div>
 </form>
