added buy functionality. AT THIS POINT THE WEBPAGE HAS MINIMUM FUNCTIONALITY.

--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -27,7 +27,7 @@
             <td>{{ ticket.quantity }}</td>
             <td>{{ ticket.email }}</td>
             <td>{{ ticket.price }}</td>
-            <td>{{ ticket.date }}</td>
+            <td>{{ ticket.date }}</td>  <!--TODO add a dash or / between day month and year for easy readability-->
             </tr>{% endfor %}
 
 </table>
