R4 and R5 testing suites should work. With R6 there is something wrong with the suite as the buy functionality works fine navigating the site.

--- a/qa327/templates/index.html
+++ b/qa327/templates/index.html
@@ -63,7 +63,7 @@
         <input class="form-control" name="name_buy" id="name_buy" required>
         <label for="quantity_buy">Quantity</label>
         <input class="form-control" type="number" name="quantity_buy" id="quantity_buy" required>
-        <input class="btn btn-lg btn-primary" type="submit" id="btn-submit-buy" value="Buy">
+        <input class="btn btn-lg btn-primary" type="submit" name="btn-submit-buy" id="btn-submit-buy" value="Buy">
     </div>
 </form>
 
